--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Twemary</title>
       <link href=""text/css" rel="stylesheet">
   </head>
+
   <body>
-    <header></header>
+    <header class = "page header"></header>
+      <nav>
+        <ul>
+          <li><a href="#">Homepage<em>Home</em></a></li>
+          <li><a href="#">About<em>About</em></a></li>
+          <li><a href="#">Contact<em>Contact</em></a></li>
+        </ul>
+      </nav>
+    </header>
+
+
     <h1>Twemary</h1>
     <p>This is some content.</p>
     <ul>
