--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Twemary</title>
-      <link href=""text/css" rel="stylesheet">
+      <link rel="stylesheet" href="https://RebeccaCrecelius/twemary/css/style.css">
   </head>
 
   <body>
