Add html and css

--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Twemary</title>
-      <link rel="stylesheet" href="https://RebeccaCrecelius/twemary/css/style.css">
-  </head>
+      <link href="css/style.css" type="text/css" rel="stylesheet">
 
   <body>
-    <header class = "page header"></header>
-      <nav>
-        <ul>
-          <li><a href="#">Homepage<em>Home</em></a></li>
-          <li><a href="#">About<em>About</em></a></li>
-          <li><a href="#">Contact<em>Contact</em></a></li>
-        </ul>
-      </nav>
+	  <header class = "page header">
+		  <img src="https://placehold.co/75x75" alt="logo">
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#">Homepage<em>Home</em></a></li>
+        <li><a href="#">About<em>About</em></a></li>
+        <li><a href="#">Contact<em>Contact</em></a></li>
+       </ul>
+    </nav>
     </header>
 
 
-    <h1>Twemary</h1>
+  <h1>Twemary</h1>
     <p>This is some content.</p>
-    <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-    </ul>
+      <ul>
+         <li>Home</li>
+         <li>About</li>
+         <li>Contact</li>
+      </ul>
     <p>Testing to see if this changes anything.</p>
+
+  <footer>
+	  <ul>
+      <li><a href="#">Homepage<em>Home</em></a></li>
+      <li><a href="#">About<em>About</em></a></li>
+      <li><a href="#">Contact<em>Contact</em></a></li>
+    </ul>
+	  <p> &#169 2024</p>
+	
+  </footer>
   </body>
 </html>
