--- a/index.html
+++ b/index.html
@@ -2,43 +2,52 @@
 <html lang="en">
 
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Twemary</title>
-      <link href="css/style.css" type="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Twemary</title>
+
+	   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	
+	  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+	  <link href="css/style.css" type="text/css" rel="stylesheet">
+  </head>
 
   <body>
-	  <header class = "page header">
+	  <header class = "page-header">
 		  <img src="https://placehold.co/75x75" alt="logo">
-    </header>
+	  </header>
 
     <nav>
       <ul>
         <li><a href="#">Homepage<em>Home</em></a></li>
         <li><a href="#">About<em>About</em></a></li>
-        <li><a href="#">Contact<em>Contact</em></a></li>
-       </ul>
-    </nav>
-    </header>
-
-
-  <h1>Twemary</h1>
-    <p>This is some content.</p>
-      <ul>
-         <li>Home</li>
-         <li>About</li>
-         <li>Contact</li>
+         <li><a href="#">Contact<em>Contact</em></a></li>
       </ul>
+    </nav>
+
+
+    <h1>Twemary</h1>
+    <p>This is some content.</p>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
     <p>Testing to see if this changes anything.</p>
 
-  <footer>
-	  <ul>
-      <li><a href="#">Homepage<em>Home</em></a></li>
-      <li><a href="#">About<em>About</em></a></li>
-      <li><a href="#">Contact<em>Contact</em></a></li>
-    </ul>
-	  <p> &#169 2024</p>
-	
-  </footer>
-  </body>
+<footer>
+	<ul>
+    <li><a href="#">Homepage<em>Home</em></a></li>
+    <li><a href="#">About<em>About</em></a></li>
+    <li><a href="#">Contact<em>Contact</em></a></li>
+  </ul>
+	<p>&#169 2024</p>
+</footer>
+
+</body>
 </html>
