--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twemary</title>
 
-	   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	
 	  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
@@ -19,34 +19,38 @@
 
   <body>
 	  <header class = "page-header">
-		  <img src="https://placehold.co/75x75" alt="logo">
-	  </header>
-
+      <div class="fixed-width clearfix">
+		  <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
+    <h1>Twemary</h1>
     <nav>
       <ul>
-        <li><a href="#">Homepage<em>Home</em></a></li>
-        <li><a href="#">About<em>About</em></a></li>
-         <li><a href="#">Contact<em>Contact</em></a></li>
+        <li><a href="#"><em>Home</em></a></li>
+        <li><a href="#"><em>About</em></a></li>
+        <li><a href="#"><em>Contact</em></a></li>
       </ul>
     </nav>
 
+    </div>
+	  </header>
 
-    <h1>Twemary</h1>
+
     <p>This is some content.</p>
     <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
     </ul>
     <p>Testing to see if this changes anything.</p>
 
 <footer>
 	<ul>
-    <li><a href="#">Homepage<em>Home</em></a></li>
-    <li><a href="#">About<em>About</em></a></li>
-    <li><a href="#">Contact<em>Contact</em></a></li>
-  </ul>
-	<p>&#169 2024</p>
+          <li><a href="#"><em>Home</em></a></li>
+          <li><a href="#"><em>About</em></a></li>
+          <li><a href="#"><em>Contact</em></a></li>
+        </ul>
+	<p> 
+	&#169 2024
+	</p>
 </footer>
 
 </body>
