Fix header alignment and add hero image

--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twemary</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Twemary</title>
 
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	
-	  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+	 <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
-	  <link rel="preconnect" href="https://fonts.googleapis.com">
-	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
-	  <link href="css/style.css" type="text/css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
+
+	<link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
 	  <header class = "page-header">
       <div class="fixed-width clearfix">
 		  <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
-    <h1>Twemary</h1>
+    <h1><a href="#">Twemary</a></h1>
     <nav>
       <ul>
         <li><a href="#"><em>Home</em></a></li>
@@ -33,8 +37,9 @@
     </div>
 	  </header>
 
-
-    <p>This is some content.</p>
+<div class="hero"><img src="https://picsum.photos/id/429/1600/500" alt="food"</div>
+<h2>Treat yourself to some ice cream!</h2>    
+<p>this is some content. </p>
     <ul>
         <li>Home</li>
         <li>About</li>
