--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
     </div>
 	  </header>
 
-<div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"</div>
+<div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"></div>
 <h2>Treat yourself to some ice cream!</h2>    
-<p>this is some content. </p>
-    <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-    </ul>
+<div class="image"><img src="https://picsum.photos/id/10/400/600" alt="image1"></div>
+<p>This is some content.</p>
+<div class="image"><img src="https://picsum.photos/id/11/400/600" alt="image2"></div>
+<p>This is some content</p>
+<div class="image"><img src="https://picsum.photos/id/13/600/400" alt="image3"></div>
     <p>Testing to see if this changes anything.</p>
 
 <footer>
