Fix footer and header

--- a/index.html
+++ b/index.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Twemary</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Twemary</title>
 
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	
-	 <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
-	<link href="css/style.css" type="text/css" rel="stylesheet">
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
 
-  <body>
-	  <header class = "page-header">
-      <div class="fixed-width clearfix">
-		  <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
-    <h1><a href="#">Twemary</a></h1>
-    <nav>
-      <ul>
-        <li><a href="#"><em>Home</em></a></li>
-        <li><a href="#"><em>About</em></a></li>
-        <li><a href="#"><em>Contact</em></a></li>
-      </ul>
-    </nav>
+  <link href="css/style.css" type="text/css" rel="stylesheet">
+</head>
 
-    </div>
-	  </header>
-
-<div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"></div>
-<h2>Treat yourself to some ice cream!</h2>    
-<div class="image"><img src="https://picsum.photos/id/10/400/600" alt="image1"></div>
-<p>This is some content.</p>
-<div class="image"><img src="https://picsum.photos/id/11/400/600" alt="image2"></div>
-<p>This is some content</p>
-<div class="image"><img src="https://picsum.photos/id/13/600/400" alt="image3"></div>
-    <p>Testing to see if this changes anything.</p>
-
-<footer>
-	<ul>
+<body>
+<!--navigation-->
+  <header class="page-header">
+    <div class="fixed-width clearfix">
+      <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
+      <h1><a href="#">Twemary</a></h1>
+      <nav>
+        <ul>
           <li><a href="#"><em>Home</em></a></li>
           <li><a href="#"><em>About</em></a></li>
           <li><a href="#"><em>Contact</em></a></li>
         </ul>
-	<p> 
-	&#169 2024
-	</p>
-</footer>
+      </nav>
+    </div>
+  </header>
+
+<!--Hero-->
+  <div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"></div>
+
+<!-- Features -->
+  <h2>Treat yourself to some ice cream!</h2>
+  <div class="feature"><img src="https://picsum.photos/id/10/400/600" alt="image1" </div>
+    <p>This is some content.</p>
+    <div class="feature"><img src="https://picsum.photos/id/11/400/600" alt="image2" </div>
+      <p>This is some content</p>
+
+<!-- community -->
+      <div class="community"><img src="https://picsum.photos/id/13/600/400" alt="image3" </div>
+        <p>Testing to see if this changes anything.</p>
+
+<!--Footer-->
+        <footer class="page-footer">
+          <div class="page-footer-content fixed-width clearfix">
+            <ul>
+              <li><a href="#"><em>Home</em></a></li>
+              <li><a href="#"><em>About</em></a></li>
+              <li><a href="#"><em>Contact</em></a></li>
+            </ul>
+            <p>
+              &#169 2024
+            </p>
+          </div>
+        </footer>
 
 </body>
 </html>
