--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<!--navigation-->
+  <!--navigation-->
   <header class="page-header">
     <div class="fixed-width clearfix">
       <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
@@ -37,33 +37,40 @@
     </div>
   </header>
 
-<!--Hero-->
+  <!--Hero-->
   <div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"></div>
 
-<!-- Features -->
+  <!-- Features -->
   <h2>Treat yourself to some ice cream!</h2>
-  <div class="feature"><img src="https://picsum.photos/id/10/400/600" alt="image1" </div>
-    <p>This is some content.</p>
-    <div class="feature"><img src="https://picsum.photos/id/11/400/600" alt="image2" </div>
-      <p>This is some content</p>
 
-<!-- community -->
-      <div class="community"><img src="https://picsum.photos/id/13/600/400" alt="image3" </div>
-        <p>Testing to see if this changes anything.</p>
+  <div class="feature"><img src="https://picsum.photos/id/10/400/600" alt="image1">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
+  </div>
+  <div class="feature"><img src="https://picsum.photos/id/11/400/600" alt="image2">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
+  </div>
 
-<!--Footer-->
-        <footer class="page-footer">
-          <div class="page-footer-content fixed-width clearfix">
-            <ul>
-              <li><a href="#"><em>Home</em></a></li>
-              <li><a href="#"><em>About</em></a></li>
-              <li><a href="#"><em>Contact</em></a></li>
-            </ul>
-            <p>
-              &#169 2024
-            </p>
-          </div>
-        </footer>
+  <!-- community -->
+  <div class="community"><img src="https://picsum.photos/id/13/600/400" alt="image3">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
+    <div>
+      <!--Footer-->
+      <footer class="page-footer">
+        <div class="page-footer-content fixed-width clearfix">
+          <ul>
+            <li><a href="#"><em>Home</em></a></li>
+            <li><a href="#"><em>About</em></a></li>
+            <li><a href="#"><em>Contact</em></a></li>
+          </ul>
+          <p class="copyright">
+            &#169 2024
+          </p>
+        </div>
+      </footer>
 
 </body>
+
 </html>
