Align header and features

--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@
   <!-- Features -->
   <h2>Treat yourself to some ice cream!</h2>
 
-  <div class="feature"><img src="https://picsum.photos/id/10/400/600" alt="image1">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
-  </div>
-  <div class="feature"><img src="https://picsum.photos/id/11/400/600" alt="image2">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
-  </div>
+  <section class="features">
+    <div class="feature"><img src="https://picsum.photos/id/10/500/525" alt="image1">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.
+      </p>
+    </div>
+    <div class="feature"><img src="https://picsum.photos/id/11/500/525" alt="image2">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.
+      </p>
+    </div>
+  </section>
 
   <!-- community -->
   <div class="community"><img src="https://picsum.photos/id/13/600/400" alt="image3">
