Add about and contact page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <nav>
         <ul>
           <li><a href="#"><em>Home</em></a></li>
-          <li><a href="#"><em>About</em></a></li>
-          <li><a href="#"><em>Contact</em></a></li>
+          <li><a href="about.html"><em>About</em></a></li>
+          <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
     </div>
@@ -66,8 +66,8 @@
     <div class="page-footer-content fixed-width clearfix">
       <ul>
         <li><a href="#"><em>Home</em></a></li>
-        <li><a href="#"><em>About</em></a></li>
-        <li><a href="#"><em>Contact</em></a></li>
+        <li><a href="about.html"><em>About</em></a></li>
+        <li><a href="contact.html"><em>Contact</em></a></li>
       </ul>
       <p class="copyright">
         &#169 2024
