Add website images and update css

--- a/index.html
+++ b/index.html
@@ -37,29 +37,38 @@
     </div>
   </header>
 
-  <!--Hero-->
-  <div class="hero"><img src="https://picsum.photos/id/429/940/500" alt="food"></div>
+  <!--CTA-->
+  <div class="hero"><img src="./images/ice-cream.jpg" alt="pistaschio ice cream"></div>
+
+  <!--        
+<span>
+              Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the <strong>Twemary</strong> app today!
+            </span>
+            <div class="button">Yum!</div>
+  <h2>Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the Twemary
+    app today!</h2>
+  <div class="button">Yum!</div>
+-->
 
   <!-- Features -->
-  <h2>Treat yourself to some ice cream!</h2>
-
   <section class="features">
-    <div class="feature"><img src="https://picsum.photos/id/10/500/525" alt="image1">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.
+    <div class="feature"><img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
+      <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are. Whether
+        you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest
+        ice cream delights.
       </p>
     </div>
-    <div class="feature"><img src="https://picsum.photos/id/11/500/525" alt="image2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.
+    <div class="feature"><img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream.">
+      <p>But that's not all! The app also features a rating system, allowing you to share your experiences and help
+        other ice cream enthusiasts find the best pistaschio treats.
       </p>
     </div>
   </section>
 
   <!-- community -->
-  <div class="community"><img src="https://picsum.photos/id/13/600/400" alt="image3">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ac tincidunt vitae semper quis lectus. Non diam phasellus vestibulum lorem sed risus ultricies.</p>
+  <div class="community"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors">
+    <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today!
+      Make every moment a sweet one!</p>
   </div>
   <!--Footer-->
   <footer class="page-footer">
@@ -74,7 +83,5 @@
       </p>
     </div>
   </footer>
-
 </body>
-
 </html>
