Add id selectors and update classes

--- a/index.html
+++ b/index.html
@@ -38,20 +38,28 @@
   </header>
 
   <!--CTA-->
-  <div class="hero"><img src="./images/ice-cream.jpg" alt="pistaschio ice cream"></div>
 
-  <!--        
-<span>
-              Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the <strong>Twemary</strong> app today!
-            </span>
-            <div class="button">Yum!</div>
-  <h2>Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the Twemary
-    app today!</h2>
-  <div class="button">Yum!</div>
--->
+
+    <!-- Sign Up Section -->
+    <div id="sign-up-section" class="hero">
+      <div id="sign-up-cta">
+        <div class="content center">
+          <div class="header">
+            <h2 class="cursive">Twemary</h2>
+            <h1 class="striking">Yum!</h1>
+          </div>
+          <div class="email">
+            <span>
+                            Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the <strong>Twemary</strong> app today!</span>
+            <div class="button">Download</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
   <!-- Features -->
-  <section class="features">
+  <div id="features">
     <div class="feature"><img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
       <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are. Whether
         you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest
