Add button and cta styling

--- a/index.html
+++ b/index.html
@@ -37,20 +37,25 @@
     </div>
   </header>
 
-  <!--CTA-->
+
+  <!--main content-->
+  <div class="main-content">
+
+    <!--CTA-->
 
 
     <!-- Sign Up Section -->
     <div id="sign-up-section" class="hero">
       <div id="sign-up-cta">
         <div class="content center">
-          <div class="header">
-            <h2 class="cursive">Twemary</h2>
-            <h1 class="striking">Yum!</h1>
+          <div class="cta-title">
+            <h2 class="cta-name">Twemary</h2>
+            <h3 class="striking">Yum!</h3>
           </div>
           <div class="email">
             <span>
-                            Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the <strong>Twemary</strong> app today!</span>
+              Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
+              <strong>Twemary</strong> app today!</span>
             <div class="button">Download</div>
           </div>
         </div>
@@ -58,38 +63,40 @@
     </div>
 
 
-  <!-- Features -->
-  <div id="features">
-    <div class="feature"><img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
-      <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are. Whether
-        you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest
-        ice cream delights.
-      </p>
-    </div>
-    <div class="feature"><img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream.">
-      <p>But that's not all! The app also features a rating system, allowing you to share your experiences and help
-        other ice cream enthusiasts find the best pistaschio treats.
-      </p>
-    </div>
-  </section>
+    <!-- Features -->
+    <div id="features">
+      <div class="feature"><img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
+        <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are. Whether
+          you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest
+          ice cream delights.
+        </p>
+      </div>
+      <div class="feature"><img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream.">
+        <p>But that's not all! The app also features a rating system, allowing you to share your experiences and help
+          other ice cream enthusiasts find the best pistaschio treats.
+        </p>
+      </div>
+      </section>
 
-  <!-- community -->
-  <div class="community"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors">
-    <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today!
-      Make every moment a sweet one!</p>
-  </div>
-  <!--Footer-->
-  <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
-      <ul>
-        <li><a href="#"><em>Home</em></a></li>
-        <li><a href="about.html"><em>About</em></a></li>
-        <li><a href="contact.html"><em>Contact</em></a></li>
-      </ul>
-      <p class="copyright">
-        &#169 2024
-      </p>
-    </div>
-  </footer>
+      <!-- community -->
+      <div class="community"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors">
+        <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
+          today!
+          Make every moment a sweet one!</p>
+      </div>
+      <!--Footer-->
+      <footer class="page-footer">
+        <div class="page-footer-content fixed-width clearfix">
+          <ul>
+            <li><a href="#"><em>Home</em></a></li>
+            <li><a href="about.html"><em>About</em></a></li>
+            <li><a href="contact.html"><em>Contact</em></a></li>
+          </ul>
+          <p class="copyright">
+            &#169 2024
+          </p>
+        </div>
+      </footer>
 </body>
+
 </html>
