--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Twemary</title>
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
@@ -23,11 +20,10 @@
 
 <body>
   <!--navigation-->
-  <header class="page-header">
-    <div class="fixed-width clearfix">
-      <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
-      <h1><a href="#">Twemary</a></h1>
-      <nav>
+  <header>
+    <div class="naviagation-bar">
+      <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
+      <nav class="head-nav">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
           <li><a href="about.html"><em>About</em></a></li>
@@ -35,6 +31,7 @@
         </ul>
       </nav>
     </div>
+
   </header>
 
 
@@ -43,19 +40,18 @@
 
     <!--CTA-->
 
-
     <!-- Sign Up Section -->
     <div id="sign-up-section" class="hero">
       <div id="sign-up-cta">
         <div class="content center">
-          <div class="cta-title">
-            <h2 class="cta-name">Twemary</h2>
-            <h3 class="striking">Yum!</h3>
+          <div class="cta-header">
+            <h2>Twemary</h2>
+            <div class="striking">Yum!</div>
           </div>
           <div class="email">
             <span>
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
-              <strong>Twemary</strong> app today!</span>
+              Twemary app today!</span>
             <div class="button">Download</div>
           </div>
         </div>
