Align feature items

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span>
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
               Twemary app today!</span>
-            <div class="button">Download</div>
+            <div class="button"><a href="#">Download</a></div>
           </div>
         </div>
       </div>
@@ -61,38 +61,64 @@
 
     <!-- Features -->
     <div id="features">
-      <div class="feature"><img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
-        <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are. Whether
-          you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest
-          ice cream delights.
-        </p>
-      </div>
-      <div class="feature"><img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream.">
-        <p>But that's not all! The app also features a rating system, allowing you to share your experiences and help
-          other ice cream enthusiasts find the best pistaschio treats.
-        </p>
-      </div>
-      </section>
-
-      <!-- community -->
-      <div class="community"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors">
-        <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
-          today!
-          Make every moment a sweet one!</p>
-      </div>
-      <!--Footer-->
-      <footer class="page-footer">
-        <div class="page-footer-content fixed-width clearfix">
-          <ul>
-            <li><a href="#"><em>Home</em></a></li>
-            <li><a href="about.html"><em>About</em></a></li>
-            <li><a href="contact.html"><em>Contact</em></a></li>
-          </ul>
-          <p class="copyright">
-            &#169 2024
-          </p>
+      <div class="feature">
+        <div class="center">
+          <div class="image-containter">
+            <img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
+          </div>
+          <div="content">
+            <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are.
+              Whether
+              you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
+              sweetest
+              ice cream delights.
+            </p>
         </div>
-      </footer>
+      </div>
+
+
+
+
+      <div class="feature">
+        <div class="center">
+          <div class="image-containter">
+            <img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream">
+          </div>
+          <div="content">
+            <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
+              help
+              other ice cream enthusiasts find the best pistaschio treats.
+            </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- community -->
+  <div id="community">
+    <div class="community-info">
+      <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors"></div>
+      <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
+        today!
+        Make every moment a sweet one!</p>
+    </div>
+  </div>
+
+  <!--Footer-->
+  <footer class="page-footer">
+    <div class="page-footer-content fixed-width clearfix">
+      <ul>
+        <li><a href="#"><em>Home</em></a></li>
+        <li><a href="about.html"><em>About</em></a></li>
+        <li><a href="contact.html"><em>Contact</em></a></li>
+      </ul>
+      <p class="copyright">
+        &#169 2024
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
