--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <!--Footer-->
   <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
+    <div class="page-footer-content">
       <ul>
         <li><a href="#"><em>Home</em></a></li>
         <li><a href="about.html"><em>About</em></a></li>
