--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- community -->
   <div id="community">
-    <div class="community-info">
+    <div class="community-container">
       <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors"></div>
       <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
         today!
