Modify community and features

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- Features -->
     <div id="features">
-      <div class="feature">
+      <div class="feature row">
         <div class="center">
           <div class="image-containter">
             <img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
@@ -70,8 +70,7 @@
             <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are.
               Whether
               you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
-              sweetest
-              ice cream delights.
+              sweetest delights.
             </p>
         </div>
       </div>
@@ -87,7 +86,7 @@
           <div="content">
             <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
               help
-              other ice cream enthusiasts find the best pistaschio treats.
+              other ice cream enthusiasts find the best pistaschio treats. Help fellow ice cream fans crave their sweet tooth.
             </p>
         </div>
       </div>
@@ -98,9 +97,9 @@
 
   <!-- community -->
   <div id="community">
-    <div class="community-container">
+    <div class="community-container row">
       <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors"></div>
-      <p>Crave for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
+      <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
         today!
         Make every moment a sweet one!</p>
     </div>
