--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
 
-      <div class="feature">
+      <div class="feature row">
         <div class="center">
           <div class="image-containter">
             <img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream">
@@ -86,7 +86,7 @@
           <div="content">
             <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
               help
-              other ice cream enthusiasts find the best pistaschio treats. Help fellow ice cream fans crave their sweet tooth.
+              other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
             </p>
         </div>
       </div>
@@ -106,7 +106,7 @@
   </div>
 
   <!--Footer-->
-  <footer class="page-footer">
+  <footer class="page-footee">
     <div class="page-footer-content">
       <ul>
         <li><a href="#"><em>Home</em></a></li>
