Update image check

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--navigation-->
   <header>
     <div class="naviagation-bar">
-      <a href="#"><img src="../images/pistaschio" alt="logo" class="logo"></a>
+      <a href="#"><img src="./images/pistaschio" alt="logo" class="logo"></a>
       <nav class="head-nav">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
