Modify navigation spacing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--navigation-->
   <header>
     <div class="naviagation-bar">
-      <a href="#"><img src="./images/pistaschio" alt="logo" class="logo"></a>
+      <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
       <nav class="head-nav">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
@@ -33,7 +33,6 @@
     </div>
 
   </header>
-
 
   <!--main content-->
   <div class="main-content">
@@ -58,7 +57,6 @@
       </div>
     </div>
 
-
     <!-- Features -->
     <div id="features">
       <div class="feature row">
@@ -75,9 +73,6 @@
         </div>
       </div>
 
-
-
-
       <div class="feature row">
         <div class="center">
           <div class="image-containter">
@@ -93,8 +88,6 @@
     </div>
   </div>
 
-
-
   <!-- community -->
   <div id="community">
     <div class="community-container row">
@@ -106,7 +99,7 @@
   </div>
 
   <!--Footer-->
-  <footer class="page-footee">
+  <footer class="page-footer">
     <div class="page-footer-content">
       <ul>
         <li><a href="#"><em>Home</em></a></li>
