Fix footer, community, cta opacity, and nav

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   </header>
 
+
   <!--main content-->
   <div class="main-content">
 
@@ -57,6 +58,7 @@
       </div>
     </div>
 
+
     <!-- Features -->
     <div id="features">
       <div class="feature row">
@@ -73,6 +75,9 @@
         </div>
       </div>
 
+
+
+
       <div class="feature row">
         <div class="center">
           <div class="image-containter">
@@ -88,6 +93,8 @@
     </div>
   </div>
 
+
+
   <!-- community -->
   <div id="community">
     <div class="community-container row">
@@ -100,7 +107,7 @@
 
   <!--Footer-->
   <footer class="page-footer">
-    <div class="page-footer-content">
+    <div class="page-footer-content fixed-width clearfix">
       <ul>
         <li><a href="#"><em>Home</em></a></li>
         <li><a href="about.html"><em>About</em></a></li>
