--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
 
   <link href="css/style.css" type="text/css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 
 <body>
