Add mobile html and media queries

--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
 <body>
   <!--navigation-->
   <header>
-    <div class="naviagation-bar">
+    <div class="naviagation-bar desktop">
       <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
       <nav class="head-nav">
+        <ul>
+          <li><a href="#"><em>Home</em></a></li>
+          <li><a href="about.html"><em>About</em></a></li>
+          <li><a href="contact.html"><em>Contact</em></a></li>
+        </ul>
+      </nav>
+      <nav class="mobile">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
           <li><a href="about.html"><em>About</em></a></li>
