Update accessibility and add second button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
   <!--navigation-->
   <header>
+    <h1>Twemary</h1>
     <div class="naviagation-bar desktop">
       <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
       <nav class="head-nav">
@@ -53,14 +54,15 @@
       <div id="sign-up-cta">
         <div class="content center">
           <div class="cta-header">
-            <h2>Twemary</h2>
-            <div class="striking">Yum!</div>
+            <h2>Twemary App!</h2>
+            <div class="striking">Ice cream with community.</div>
           </div>
           <div class="email">
             <span>
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
               Twemary app today!</span>
-            <div class="button"><a href="#">Download</a></div>
+            <div class="button"><a href="#">Download from Google Play</a></div>
+            <div class="button2"><a href="#">Download from App Store</a></div>
           </div>
         </div>
       </div>
