--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!--navigation-->
   <header>
     <h1>Twemary</h1>
-    <div class="naviagation-bar desktop">
+    <div class="naviagation-bar">
       <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
       <nav class="head-nav">
         <ul>
