Add button container and center buttons Center buttons. Start working with button widths. Modify button hover color for clarity.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             <span>
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
               Twemary app today!</span>
+	    <div class = buttonGroup>
             <div class="button"><a href="#">Download from Google Play</a></div>
             <div class="button2"><a href="#">Download from App Store</a></div>
+	   </div>
           </div>
         </div>
       </div>
