Link logotype and align buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <h1>Twemary</h1>
     <div class="naviagation-bar">
-      <a href="#"><img src="./images/pistaschio.jpg" alt="logo" class="logo"></a>
+      <a href="#"><img src="./images/TwemaryLogoTypeOW.svg" alt="logo" class="logo"></a>
       <nav class="head-nav">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
@@ -61,10 +61,10 @@
             <span>
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
               Twemary app today!</span>
-	    <div class = buttonGroup>
-            <div class="button"><a href="#">Download from Google Play</a></div>
-            <div class="button2"><a href="#">Download from App Store</a></div>
-	   </div>
+            <div class=buttonGroup>
+              <div class="button"><a href="#">Download from Google Play</a></div>
+              <div class="button2"><a href="#">Download from App Store</a></div>
+            </div>
           </div>
         </div>
       </div>
