Fix buttons and features class

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div id="features">
       <div class="feature row1">
         <div class="center">
-          <div class="image-containter">
-            <img src="./images/ice-cream-hand.jpg" alt="someone holding an ice cream cone">
+          <div class="image-container">
+            <img src="./images/ice-cream-hand.jpg" alt="Someone holding an ice cream cone.">
           </div>
           <div="content">
             <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are.
@@ -92,8 +92,8 @@
 
       <div class="feature row2">
         <div class="center">
-          <div class="image-containter">
-            <img src="./images/pistaschio-ice-cream.jpg" alt="a close-up of pistaschio ice cream">
+          <div class="image-container">
+            <img src="./images/pistaschio-ice-cream.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
           <div="content">
             <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
@@ -110,7 +110,7 @@
   <!-- community -->
   <div id="community">
     <div class="community-container row">
-      <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="a lot of ice cream flavors"></div>
+      <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="A lot of ice cream flavors."></div>
       <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
         today!
         Make every moment a sweet one!</p>
