--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
     <!-- Features -->
-    <div id="features">
+  <! -  <div id="features" - >
       <div class="feature row1">
         <div class="center">
           <div class="image-container">
@@ -103,7 +103,6 @@
         </div>
       </div>
     </div>
-  </div>
 
 
 
@@ -116,7 +115,7 @@
         Make every moment a sweet one!</p>
     </div>
   </div>
-
+ </div>
   <!--Footer-->
   <footer class="page-footer">
     <div class="page-footer-content fixed-width clearfix">
