Fix overlapping items

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
     <!-- Features -->
-  <! -  <div id="features" - >
+    <div id="features">
       <div class="feature row1">
         <div class="center">
           <div class="image-container">
@@ -95,14 +95,16 @@
           <div class="image-container">
             <img src="./images/pistaschio-ice-cream.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
+          </div>
           <div="content">
             <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
               help
               other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
             </p>
-        </div>
+      
       </div>
     </div>
+  
 
 
 
@@ -115,7 +117,9 @@
         Make every moment a sweet one!</p>
     </div>
   </div>
- </div>
+</div>
+
+
   <!--Footer-->
   <footer class="page-footer">
     <div class="page-footer-content fixed-width clearfix">
