Fix feature and community alignment

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <div id="features">
       <div class="feature row1">
         <div class="center">
-          <div class="image-container">
-            <img src="./images/ice-cream-hand.jpg" alt="Someone holding an ice cream cone.">
+          <div class="image-container img1">
+            <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone.">
           </div>
           <div="content">
-            <p>With this app, you can easily find the nearest pistaschio ice cream shop, no matter where you are.
+            <p>With this app, you can easily find delicious ice cream, no matter where you are!
               Whether
               you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
               sweetest delights.
@@ -92,8 +92,8 @@
 
       <div class="feature row2">
         <div class="center">
-          <div class="image-container">
-            <img src="./images/pistaschio-ice-cream.jpg" alt="A close-up of pistaschio ice cream.">
+          <div class="image-container img2">
+            <img src="./images/pistaschio-ice-cream-square.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
           </div>
           <div="content">
