Add html for rewards

--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
   </div>
 </div>
 
+<!-- rewards -->
+   <div id="features">
+      <div class="feature row4">
+        <div class="center">
+          <div class="image-container img1">
+            <img src="./images/ice-cream-hand.jpg" alt="Someone holding an ice cream cone.">
+          </div>
+          <div="content">
+            <p>Earn points and win pizes!
+            </p>
+        </div>
+      </div>
+	
+
+</div>
+</div>
+
 
   <!--Footer-->
   <footer class="page-footer">
